# SPEAR

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  README.zh.md  build.rs  config.toml  go.mod  go.sum
.cargo/: config.toml
ai-docs/: DEAD_CODE_CLEANUP-en.md  README-en.md  README-zh.md  api-usage-guide-zh.md  artifact-task-instance-architecture-overview-en.md  artifact-task-instance-architecture-overview-zh.md  code-coverage-zh.md  (+32 more)
spear-next/: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  config-rocksdb.toml  config-sled.toml  config.toml  example-config.toml  tarpaulin.toml
spear-next/ai-docs/: DEAD_CODE_CLEANUP-zh.md  INDEX.md  NETWORK_CLEANUP-zh.md  README.md  api-usage-guide-en.md  artifact-task-instance-architecture-overview-en.md  artifact-task-instance-architecture-overview-zh.md  cli-configuration-zh.md  code-cleanup-summary-en.md  code-cleanup-zh.md  code-coverage-setup-summary-zh.md  compilation-errors-fix-en.md  coverage-usage-zh.md  duplicate-cliargs-cleanup-zh.md  e2e-testing-en.md  e2e-testing-zh.md  elegant-response-architecture-en.md  elegant-response-architecture-zh.md  execution-mode-support-implementation-en.md  function-invocation-logic-flow-en.md  function-invocation-logic-flow-zh.md  function-invocation-sync-async-analysis-en.md  function-invocation-sync-async-analysis-zh.md  function-service-integration-en.md  function-service-integration-zh.md  grpc-api-implementation-en.md  grpc-api-implementation-zh.md  grpc-error-handling-fix-en.md  grpc-error-handling-fix-zh.md  grpc-transport-error-troubleshooting-en.md  grpc-transport-error-troubleshooting-zh.md  handlers-architecture-zh.md  handlers-to-services-refactor-zh.md  implementation-plan-en.md  instance-manager-cleanup-zh.md  instance-startup-connection-flow-en.md  kubernetes-runtime-implementation-en.md  kv-abstraction-en.md  kv-testing-architecture-zh.md  makefile-disable-zh.md  (+42 more)
spear-next/assets/admin/: index.html  react-app.js
spear-next/benches/: kv_storage_benchmarks.rs
spear-next/config/sms/: config-rocksdb.toml  config-sled.toml  config.toml  example-config.toml
spear-next/config/spearlet/: config.toml
spear-next/docs/: execution-mode-support-en.md
spear-next/examples/: kv-examples.rs  kv-factory-examples.rs  kv_factory_usage.rs
spear-next/proto/sms/: task.proto
spear-next/proto/spearlet/: function.proto  object.proto
spear-next/samples/wasm-c/: hello.c
spear-next/scripts/: coverage.sh
spear-next/src/: constants.rs  lib.rs
spear-next/src/apps/sms/: main.rs
spear-next/src/apps/spearlet/: main.rs
spear-next/src/config/: base.rs  mod.rs
spear-next/src/http/: gateway.rs  mod.rs  routes.rs
spear-next/src/http/handlers/: docs.rs  health.rs  mod.rs  node.rs  resource.rs  task.rs
spear-next/src/network/: grpc.rs  mod.rs
spear-next/src/proto/: mod.rs  sms.rs  spearlet.rs
spear-next/src/services/: config.rs  error.rs  mod.rs  node.rs  resource.rs  service.rs  task.rs  test_utils.rs
spear-next/src/sms/: config.rs  config_test.rs  events.rs  events_test.rs  file_service_test.rs  gateway.rs  gateway_test.rs  grpc_server.rs  grpc_server_test.rs  handlers_test.rs  http_gateway.rs  http_gateway_test.rs  mod.rs  routes.rs  routes_test.rs  service.rs  services.rs  task_status_test.rs  types.rs  web_admin.rs
spear-next/src/sms/handlers/: common.rs  docs.rs  files.rs  health.rs  mod.rs  node.rs  resource.rs  task.rs
spear-next/src/sms/services/: node_service.rs  resource_service.rs  task_service.rs  test_utils.rs
spear-next/src/spearlet/: config.rs  config_test.rs  function_service.rs  function_service_test.rs  grpc_server.rs  grpc_server_test.rs  http_gateway.rs  http_gateway_test.rs  mod.rs  object_service.rs  object_service_test.rs  registration.rs  registration_test.rs  task_events.rs  task_events_test.rs
spear-next/src/spearlet/execution/: artifact.rs  artifact_fetch.rs  http_adapter.rs  instance.rs  manager.rs  mod.rs  pool.rs  scheduler.rs  task.rs
spear-next/src/spearlet/execution/communication/: channel.rs  connection_manager.rs  factory.rs  mod.rs  monitoring.rs  protocol.rs  secret_validation_test.rs  transport.rs
spear-next/src/spearlet/execution/runtime/: kubernetes.rs  mod.rs  process.rs  wasm.rs
spear-next/src/storage/: kv.rs  mod.rs
spear-next/src/utils/: error_macros.rs  mod.rs
spear-next/tests/: execution_kind_policy_tests.rs  function_service_integration_tests.rs  http_integration_tests.rs  integration_tests.rs  kv_storage_edge_cases.rs  kv_storage_integration_tests.rs  sms_update_status_tests.rs  spearlet_reconnect_tests.rs  task_integration_tests.rs  testcontainers_e2e.rs  web_admin_execution_kind_tests.rs  web_admin_integration_tests.rs  web_admin_task_results_tests.rs
spear-next/ui-tests/: global-setup.ts
spear-next/ui-tests/tests/: executable_select_unit.spec.ts  files_delete.spec.ts  files_modified_tz.spec.ts  task_modal.spec.ts  task_modal_scheme_prefill.spec.ts
tools/spear-quickstart/: Cargo.toml  README-en.md  README-zh.md
tools/spear-quickstart/src/: config.rs  deploy.rs  deploy_docker_local.rs  main.rs  tui.rs  tui_menu.rs  tui_ui.rs
(+693 files in other folders)
