[package]
name = "spear-next"
version = "0.1.0"
edition = "2021"

# Library configuration / 库配置
[lib]
name = "spear_next"
path = "src/lib.rs"

# Binary configurations / 二进制配置
[[bin]]
name = "sms"
path = "src/apps/sms/main.rs"

[[bin]]
name = "spearlet"
path = "src/apps/spearlet/main.rs"

[dependencies]
# Async runtime / 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# gRPC framework / gRPC框架
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP server / HTTP服务器
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout"] }

# Configuration management / 配置管理
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command line argument parsing / 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# Logging / 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation / UUID生成
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }

# Time handling / 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Error handling / 错误处理
anyhow = "1.0"
thiserror = "1.0"

# Static file embedding / 静态文件嵌入
rust-embed = "8.0"

# Cryptographic hashing / 加密哈希
sha2 = "0.10"

# Base64 encoding/decoding / Base64编码解码
base64 = "0.21"

# Database / 数据库
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.22", optional = true }

# Async trait support / 异步trait支持
async-trait = "0.1"

# High-performance synchronization primitives / 高性能同步原语
parking_lot = "0.12"

# Concurrent hash map / 并发哈希映射
dashmap = "5.5"

# High-performance concurrent map / 高性能并发映射
evmap = { version = "10.0", optional = true }

# System calls / 系统调用
libc = "0.2"

# MD5 hashing / MD5哈希
md5 = "0.7"

# Random number generation / 随机数生成
rand = "0.8"
futures = "0.3"

[dev-dependencies]
# Testing utilities / 测试工具
tempfile = "3.0"
tokio-test = "0.4"
axum-test = "14.0"
tower = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
serde_urlencoded = "0.7"
# Docker-based integration testing / 基于Docker的集成测试
testcontainers = "0.15"
serial_test = "2.0"

# Benchmarking / 基准测试
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
brotli = "3"
flate2 = "1"

[[bench]]
name = "kv_storage_benchmarks"
harness = false

[features]
default = []
sled = ["dep:sled"]
rocksdb = ["dep:rocksdb"]
evmap = ["dep:evmap"]
