[package]
name = "spear-quickstart"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bollard = "0.17"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28"
k8s-openapi = { version = "0.22", features = ["v1_29"] }
kube = { version = "0.92", features = ["client", "config", "derive", "runtime", "rustls-tls"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
unicode-width = "0.1"
